[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/gui/joystick/axis.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/gui/joystick/joystick.gd" type="Script" id=3]
[ext_resource path="res://resources/themes/default_theme.tres" type="Theme" id=4]
[ext_resource path="res://textures/buttons/pause.svg" type="Texture" id=5]
[ext_resource path="res://textures/buttons/jump.svg" type="Texture" id=6]

[node name="Joystick" type="MarginContainer"]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 4 )
custom_constants/margin_right = 80
custom_constants/margin_top = 80
custom_constants/margin_left = 80
custom_constants/margin_bottom = 80
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 80.0
margin_top = 80.0
margin_right = 1200.0
margin_bottom = 640.0
mouse_filter = 2

[node name="Control" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1120.0
margin_bottom = 278.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Control"]
margin_right = 124.0
margin_bottom = 278.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureButtonPause" type="TextureButton" parent="VBoxContainer/Control/VBoxContainer"]
margin_right = 124.0
margin_bottom = 137.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
action_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Control" type="Control" parent="VBoxContainer/Control/VBoxContainer"]
margin_top = 141.0
margin_right = 124.0
margin_bottom = 278.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="VBoxContainer/Control"]
margin_left = 128.0
margin_right = 1120.0
margin_bottom = 278.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 282.0
margin_right = 1120.0
margin_bottom = 560.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AxisLeft" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 11.0
margin_top = 11.0
margin_right = 267.0
margin_bottom = 267.0
size_flags_horizontal = 6
size_flags_vertical = 6
action_left = "move_left"
action_right = "move_right"
action_up = "move_up"
action_down = "move_down"

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 282.0
margin_right = 838.0
margin_bottom = 278.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 842.0
margin_right = 1120.0
margin_bottom = 278.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureButtonJump" type="TextureButton" parent="VBoxContainer/HBoxContainer/MarginContainer"]
margin_left = 39.0
margin_top = 39.0
margin_right = 239.0
margin_bottom = 239.0
rect_min_size = Vector2( 200, 200 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
action_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5

[connection signal="button_down" from="VBoxContainer/Control/VBoxContainer/TextureButtonPause" to="." method="_on_TextureButtonPause_button_down"]
[connection signal="button_up" from="VBoxContainer/Control/VBoxContainer/TextureButtonPause" to="." method="_on_TextureButtonPause_button_up"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/MarginContainer/TextureButtonJump" to="." method="_on_TextureButtonJump_button_down"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/MarginContainer/TextureButtonJump" to="." method="_on_TextureButtonJump_button_up"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/MarginContainer/TextureButtonJump" to="." method="_on_TextureButtonJump_gui_input"]
